# pr-sentinel

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_data.rs  app_data_v1.rs  app_data_v2.rs  app_state.rs  event_names.rs  file_storage.rs  github_service.rs  lib.rs  log.rs  main.rs  notifications.rs  polling.rs  pr_predicates.rs
src/lib/: appstate.svelte.ts  types.ts
src/lib/components/: Button.svelte  Checkbox.svelte  GithubTokenInput.svelte  ListButton.svelte  Pill.svelte  PullRequestRow.svelte  Select.svelte  Spinner.svelte  SubtleButton.svelte  TextInput.svelte  Typography.svelte  index.ts
src/lib/domain/: categories.ts
src/lib/icons/: Bell.svelte  Cogwheel.svelte  Cross.svelte  DownArrow.svelte  Link.svelte  Pen.svelte  Plus.svelte  Refresh.svelte  Tray.svelte  UpArrow.svelte
src/lib/screens/: AddFilterScreen.svelte  ApprovalCountRow.svelte  EditFilterScreen.svelte  MainScreen.svelte  Onboarding.svelte  PullRequestListScreen.svelte  SettingsScreen.svelte
src/routes/: +page.svelte  +page.ts
